force-app/main/default/objects/ORG_Integration_Event__e/ORG_Integration_Event__e.object-meta.xml
<CustomObject>
    <label>Integration Event</label>
    <pluralLabel>Integration Events</pluralLabel>
</CustomObject>