force-app/main/default/objects/ORG_Integration_Event__e/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>