force-app/main/default/objects/ORG_Integration_Event__e/fields/Times_Retried__c.field-meta.xml
<CustomField>
    <fullName>Times_Retried__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times Retried</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>